automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,7 @@
     }
    ],
    "source": [
-    "for i in range(0, len(countries))):\n",
+    "for i in range(0, len(countries) -1):\n",
     "    print(countries[i])"
    ]
   },
