automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -424,12 +424,13 @@
      "output_type": "stream",
      "text": [
       "Croatia\n",
-      "USA\n"
+      "USA\n",
+      "Argentina\n"
      ]
     }
    ],
    "source": [
-    "for i in range(0, len(countries) - 1):\n",
+    "for i in range(0, len(countries)):\n",
     "    print(countries[i])"
    ]
   },
